RESOLVED FIXED132594
[iOS][WK2] WebKit2 does not set CanPreventNativeGestures on the platform events
https://bugs.webkit.org/show_bug.cgi?id=132594
Summary [iOS][WK2] WebKit2 does not set CanPreventNativeGestures on the platform events
Benjamin Poulain
Reported 2014-05-05 18:08:17 PDT
[iOS][WK2] WebKit2 does not set CanPreventNativeGestures on the platform events
Attachments
Patch (5.00 KB, patch)
2014-05-05 18:08 PDT, Benjamin Poulain
no flags
Patch (8.51 KB, patch)
2014-05-06 16:54 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2014-05-05 18:08:39 PDT
Benjamin Poulain
Comment 2 2014-05-06 16:54:53 PDT
Benjamin Poulain
Comment 3 2014-05-06 17:02:18 PDT
Comment on attachment 230952 [details] Patch Clearing flags on attachment: 230952 Committed r168393: <http://trac.webkit.org/changeset/168393>
Benjamin Poulain
Comment 4 2014-05-06 17:02:20 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 5 2014-05-07 01:22:38 PDT
(In reply to comment #3) > (From update of attachment 230952 [details]) > Clearing flags on attachment: 230952 > > Committed r168393: <http://trac.webkit.org/changeset/168393> and the !IOS buildfix landed in https://trac.webkit.org/changeset/168414 bool allTouchPointsAreReleased() const is a member of WebTouchEvent, not WebPlatformTouchEvent.
Benjamin Poulain
Comment 6 2014-05-07 01:30:04 PDT
(In reply to comment #5) > (In reply to comment #3) > > (From update of attachment 230952 [details] [details]) > > Clearing flags on attachment: 230952 > > > > Committed r168393: <http://trac.webkit.org/changeset/168393> > > and the !IOS buildfix landed in https://trac.webkit.org/changeset/168414 > > bool allTouchPointsAreReleased() const is a member > of WebTouchEvent, not WebPlatformTouchEvent. Sorry about that. Thanks for fixing.
Note You need to log in before you can comment on or make changes to this bug.