[iOS][WK2] WebKit2 does not set CanPreventNativeGestures on the platform events https://bugs.webkit.org/show_bug.cgi?id=132594

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-05-06
Reviewed by Simon Fraser.

Set CanPreventNativeGestures on the plaform event.
Change the tracking of WKContentView to be similar to WebPageProxy.

* Shared/WebEvent.h:
(WebKit::WebTouchEvent::WebTouchEvent):
(WebKit::WebTouchEvent::canPreventNativeGestures):
(WebKit::WebTouchEvent::setCanPreventNativeGestures):
* Shared/WebEventConversion.cpp:
(WebKit::WebKit2PlatformTouchEvent::WebKit2PlatformTouchEvent):
* Shared/ios/WebTouchEventIOS.cpp:
(WebKit::WebTouchEvent::encode):
(WebKit::WebTouchEvent::decode):
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _webTouchEventsRecognized:]):


Canonical link: https://commits.webkit.org/150667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168393 268f45cc-cd09-0410-ab3c-d52691b4dbfc